# idapy

./: .gitignore  LICENSE  MANIFEST.in  README.md  describe.py  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: describe-checkpoint.py
docs/: T0-System.ipynb  T1-Data.ipynb  T2-Basic.ipynb
src/idapy/: __init__.py  describe.py
test/: BenchMark.ipynb  test.py
