[build-system]
requires = ["setuptools>=64.0.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "idapy"
version = "0.1.6"
description = "Interactive Data Analysis in Python"
authors = [
    { name = "Oberon Leung", email = "ob_001@hotmail.com" }
]
dependencies = [
    "numpy",
    "pandas",
	"cupy"
]
requires-python = ">=3.10"
dynamic = ["classifiers"]